--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
     <scope>provided</scope>
 </dependency>
 
+<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.0</version>
+</dependency>
 
 <!--
 <dependency>
@@ -116,6 +121,13 @@
     <artifactId>jackson-jaxrs-json-provider</artifactId>
     <version>2.3.3</version>
 </dependency>
+
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.5</version>
+</dependency>
+
 
 
   </dependencies>
