--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,35 @@
 </dependency>
 
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${org.springframework-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${org.springframework-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.7.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.7.4</version>
+      <scope>runtime</scope>
+    </dependency>
+
+       <dependency>
+       	<groupId>cglib</groupId>
+       	<artifactId>cglib</artifactId>
+       	<version>2.2</version>
+       </dependency>
 
   </dependencies>
 
