--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
       <artifactId>hibernate-validator</artifactId>
       <version>5.2.2.Final</version>
     </dependency>
+
+<!--
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jcl</artifactId>
@@ -47,6 +49,27 @@
       <version>1.2.16</version>
       <scope>runtime</scope>
     </dependency>
+ -->
+
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.10</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-slf4j-impl</artifactId>
+    <version>2.1</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.1</version>
+</dependency>
+
+
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
