--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,7 @@
       org.springframework.web.context.ContextLoaderListener
     </listener-class>
   </listener>
+
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>
@@ -45,10 +46,24 @@
     </init-param>
   </filter>
 
+  <filter>
+    <filter-name>logSettingFilterFilter</filter-name>
+    <filter-class>
+      filter.LogSettingFilterFilter
+    </filter-class>
+  </filter>
+
+
   <filter-mapping>
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>logSettingFilterFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
@@ -58,9 +73,10 @@
     <init-param>
       <param-name>contextConfigLocation</param-name>
       <param-value>
-        classpath:/META-INF/spring/beans-webmvc.xml
+        classpath:/META-INF/spring/beans-biz.xml
       </param-value>
     </init-param>
+
 <!--
     <init-param>
       <param-name>contextClass</param-name>
@@ -82,5 +98,16 @@
     <servlet-name>dispatcherServlet</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+
+
+<!--
+ <context-param>
+  <param-name>log4jConfigLocation</param-name>
+  <param-value>classpath:/META-INF/spring/log4j2.xml</param-value>
+ </context-param>
+ <listener>
+  <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+ </listener>
+ -->
 
 </web-app>
