--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,17 @@
     </init-param>
   </filter>
 
+<filter>
+    <filter-name>MultipartFilter</filter-name>
+    <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+</filter>
+<!-- (2) -->
+<filter-mapping>
+    <filter-name>MultipartFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>
+
+
   <filter>
     <filter-name>logSettingFilterFilter</filter-name>
     <filter-class>
